# tf2tts

./: .gitignore  Cargo.toml  LICENSE  README.md  wip-installation.md
src/: app.rs  audio_player.rs  log_watcher.rs  main.rs  message_processor.rs
src/providers/: mod.rs
src/tts/: mod.rs  tts_impl.rs
tf2tts-cli/: Cargo.toml
tf2tts-cli/src/: main.rs
tf2tts-core/: Cargo.toml
tf2tts-core/src/: app.rs  audio_player.rs  lib.rs  message_processor.rs  pipeline.rs  tts.rs
tf2tts-core/src/providers/: webapi.rs
