[package]
name = "tf2tts-core"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1", features = ["full"] }
rodio = "0.17"
tempfile = "3.8"
symphonia = { version = "0.5", features = ["mp3"] }
notify = "6.1"
tracing = "0.1.41"
vdf-serde = "0.3"
regex = "1.11.1"
enigo = "0.3.0"
thiserror = "2.0.11"